# graphics-programming-2025

./: .gitignore  CMakeLists.txt
exercises/exercise00/: main.cpp
exercises/exercise04/: CMakeLists.txt
exercises/exercise07/: CMakeLists.txt
exercises/reexercise00/: CMakeLists.txt  main.cpp
exercises/reexercise00-old/: main.cpp
libraries/glfw/: CMakeLists.txt
libraries/itugl/: CMakeLists.txt
libraries/itugl/include/ituGL/scene/: Bounds.h
libraries/itugl/src/ituGL/asset/: Texture2DLoader.cpp  TextureCubemapLoader.cpp
